# radio-dreams

./: .flake8  .gitignore  contrib.rst  noxfile.py  pyproject.toml
.github/workflows/: release-drafter.yml
docs/: api.rst  conf.py  index.rst  installation.rst  toc.rst
src/radio_dreams/: __init__.py  interferometer.py
tests/: test_interferometer.py
tests/test_data/: test_mwa.txt
tests/test_radio_dreams/: test_interferometer.py
