[tool.poetry]
name = "radio-dreams"
version = "0.1.0"
license = "MIT"
readme = "README.rst"
description = "Imagined Interferometers"
keywords = ["radio", "interferometer", "simulator"]
homepage = "https://github.com/amanchokshi/radio-dreams"
repository = "https://github.com/amanchokshi/radio-dreams"
documentation = "https://radio-dreams.readthedocs.io"
authors = ["Aman Chokshi <achokshi@student.unimelb.edu.au>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
